--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </script>
 </head>
 <body>
-    <div id="erc1155Tokens">Loading...</div>
+    <div id="erc1155Tokens">Cargando precios de mementos...</div>
     <div id="lastUpdated"></div>
 </body>
 </html>
